# mmcif_pdbx

./: .gitignore  .gitmodules  Makefile  README.md  requirements.txt
base/: em-V5public.dic  mmcif_pdbx-conditionals.dic  mmcif_pdbx-data.dic  mmcif_pdbx-def-ilg.dic  mmcif_pdbx-def-pdb-ilg.dic  mmcif_pdbx_v50-def-ilg.dic  mmcif_pdbx_v50-ext.dic  mmcif_pdbx_v50-generator-local.dic  mmcif_pdbx_v50-header.dic  mmcif_pdbx_v50-variable.dic  mmcif_pdbx_v50.PARTS  mmcif_pdbx_v50.SED  mmcif_pdbx_v5_next-def-ilg.dic  mmcif_pdbx_v5_next-ext.dic  mmcif_pdbx_v5_next-generator-local.dic  mmcif_pdbx_v5_next-header.dic  mmcif_pdbx_v5_next-header.dic.orig  mmcif_pdbx_v5_next-variable.dic  mmcif_pdbx_v5_next.PARTS  mmcif_pdbx_v5_next.SED
dict-ihm-extension/: Makefile  mmcif_ihm_ep.dic
dict-mmcif_pdbx/: README  chem_comp_atom_feature.dic  chem_comp_group.dic  mmcif_pdbx-def-1.dic  mmcif_pdbx-def-11.dic  mmcif_pdbx-def-12.dic  mmcif_pdbx-def-13.dic  mmcif_pdbx-def-14.dic  mmcif_pdbx-def-2.dic  mmcif_pdbx-def-4.dic  mmcif_pdbx-def-5.dic  mmcif_pdbx-def-ilg.dic  mmcif_pdbx-header.dic  mmcif_pdbx.PARTS  mmcif_pdbx.dic  pdbx_entity_poly_one_letter_seq.dic  pdbx_struct_group_v2.dic  struct_model_gen-proposal.dic
dict-mmcif_pdbx_internal/: mmcif_pdbx_internal-def-ilg.dic  mmcif_pdbx_internal-header.dic  mmcif_pdbx_internal.PARTS
dict-mmcif_pdbx_v31/: mmcif_pdbx-def-1.dic  mmcif_pdbx-def-10.dic  mmcif_pdbx-def-13.dic  mmcif_pdbx-def-5.dic  mmcif_pdbx-def-8.dic  mmcif_pdbx-def-9.dic  mmcif_rcsb_xray-def-11.dic
dict-mmcif_pdbx_v32/: Makefile  (+1 more)
tests/regextest/: CMakeLists.txt  t_regex.c
(+226 files in other folders)
